<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eyrie</string>
    <string name="action_contact">Contact</string>
    <!--<string name="core_name">CorePrime</string>-->
    <string name="resetButton">Return to Normal Operation</string>
    <string name="blankString"></string>
    <string name="zoneTitle">Zone</string>
    <string name="awayButton">Set Away Temps</string>
    <string name="homeButton">Set Home Temps</string>
    <string name="action_login">Login</string>
    <string name="min_label"></string>
    <string name="max_label"></string>
    <string name="context_add_switch">Add temperature change</string>
    <string name="context_clear_day">Clear this day\'s schedule</string>
    <string name="context_copy_day">Copy this day\'s schedule</string>
    <string name="context_paste_day">Paste day\'s schedule</string>
    <string name="context_duplicate_day">Duplicate to entire week</string>
    <string name="title_activity_schedule">Thermostat Schedule</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_schedule_activity2">ScheduleActivity2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_copy_zone">Copy Zone</string>
    <string name="action_paste_zone">Paste Zone</string>
    <string name="action_clear_all">Clear All Days</string>
    <string name="prompt_app_id">Spark API Key</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pick_device">Choose Core</string>
    <string name="save_password_check">Save Password?</string>
    <string name="edit_schedules">Edit Schedules</string>
    <string name="action_logout">Logout</string>

</resources>