<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.dansull.eyrie.ScheduleActivity">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_schedule"
        android:title="@string/edit_schedules"
        app:showAsAction="never"
        android:checkable="true" />
    <item
        android:id="@+id/action_copy_zone"
        android:title="@string/action_copy_zone"
        app:showAsAction="never"
        android:enabled="false" />
    <item
        android:id="@+id/action_paste_zone"
        android:title="@string/action_paste_zone"
        app:showAsAction="never"
        android:enabled="false" />
    <item
        android:id="@+id/action_clear_all"
        android:title="@string/action_clear_all"
        app:showAsAction="never"
        android:enabled="false" />
</menu>
