<?xml version="1.0" encoding="utf-8"?>


<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"></TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetButton"
                android:id="@+id/resetButton"
                android:layout_column="0"
                android:layout_span="3"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:layout_gravity="top">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#00FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeButton"
                android:id="@+id/homeButton"
                android:layout_column="0"
                android:layout_marginRight="2dp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#00FFFFFF"
                android:layout_column="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/awayButton"
                android:id="@+id/awayButton"
                android:layout_column="1"
                android:layout_marginLeft="2dp" />
        </TableRow>

    </TableLayout>



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Hold Type:"
                android:id="@+id/textView7"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/typeRadioGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Until next schedule change"
                    android:id="@+id/tempRadio"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Permanently"
                    android:id="@+id/permRadio" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Until:"
                    android:id="@+id/timeRadio" />
            </RadioGroup>

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"
                android:spinnersShown="true"
                android:calendarViewShown="false"
                android:layout_marginTop="-25dp"
                android:layout_marginBottom="-25dp"
                android:scaleX="0.85"
                android:scaleY="0.85"
                android:visibility="gone" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_marginTop="-25dp"
                android:layout_marginBottom="-25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.85"
                android:scaleY="0.85"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zones:"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginTop="25dp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="House"
                        android:id="@+id/houseCheck"
                        android:layout_marginRight="2dp"
                        android:checked="true"/>


                    <EditText
                        android:text="60"
                        android:layout_marginLeft="2dp"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/houseSetTemp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="ºF" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#FF909090"
                        android:layout_span="3" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Floor"
                        android:id="@+id/floorCheck"
                        android:checked="true" android:layout_marginRight="2dp"/>



                    <EditText
                        android:layout_marginLeft="2dp"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/floorSetTemp"
                        android:text="60"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="ºF" />
                </TableRow>
            </TableLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Override"
                android:id="@+id/submitButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>